# shuttle-demo

./: Cargo.toml  README.md
migrations/: 20241022121131_init.up.sql
src/: database.rs  endpoints.rs  main.rs  search.rs  state.rs
